--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+    <fragment
+        android:id="@+id/fragment_a"
+        android:name="com.theleafapps.pro.slnerdfragmentcommunication.FragmentA"
+        android:layout_width="match_parent"
+        android:layout_margin="20dp"
+        android:layout_height="300dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <fragment
+        android:id="@+id/fragment_b"
+        android:name="com.theleafapps.pro.slnerdfragmentcommunication.FragmentB"
+        android:layout_width="match_parent"
+        android:layout_margin="20dp"
+        android:layout_height="300dp"
+        android:layout_below="@+id/fragment_a" />
+</RelativeLayout>
