--- a/app/src/main/res/layout/fragment_b.xml
+++ b/app/src/main/res/layout/fragment_b.xml
@@ -3,15 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#bb22"
-    tools:context=".FragmentB">
+    android:background="#FFBB00"
+    tools:context=".FragmentA">
 
-    <Button
-        android:id="@+id/click_me_btn"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        android:layout_centerInParent="true"
-        android:contentDescription="@string/click_me_button_text"
-        android:text="@string/click_me_button_text" />
+    <TextView
+        android:id="@+id/text_change"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="80dp"
+        android:text="@string/hello_blank_fragment"
+        android:textColor="@android:color/red"
+        android:textSize="30sp" />
 
 </RelativeLayout>
