--- a/app/src/main/res/layout/fragment_b.xml
+++ b/app/src/main/res/layout/fragment_b.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="80dp"
         android:text="@string/hello_blank_fragment"
-        android:textColor="@android:color/red"
-        android:textSize="30sp" />
+        android:textColor="#FF0000"
+        android:textSize="16sp" />
 
 </RelativeLayout>
